# experimentaldictionarylens

./: .gitignore  DESIGN_UPDATES.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRIVACY_POLICY.md  QUICKSTART.md  README.md  app.py  cache_manager.py  iOS_MIGRATION_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt
static/: manifest.json  sw.js
static/css/: style.css  style_old.css
static/js/: main.js
templates/: index.html
tests/: __init__.py  test_app.py  test_cache.py
